src/scss/style.scss
@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700');
@import url('https://fonts.googleapis.com/css?family=Roboto');

$primary-color: #ff3333;
$primary-font-stack: Montserrat, sans-serif;
$secondary-font-stack: Roboto, sans-serif;

* {
    box-sizing: border-box;
}

::selection {
    background-color: #ababab;
    color: white;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: $primary-font-stack;
}

a {
  color: $primary-color;
}

html,
body {
  position: absolute;
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
}

body {
  font-family: $secondary-font-stack;
}

.h-hide-overflow {
  overflow: hidden;
}

canvas {
  top: 0;
  right: 0;
  position: fixed;
  z-index: -1;
  transition: right 1s;
}

.c-navigation {
  font-family: $primary-font-stack;

  &--next {
    text-align: right;
  }

  &__link {
    text-decoration: none;
  }
}

.c-button {
  background-color: $primary-color;
  color: white;
  text-decoration: none;
  padding: 0.75rem;
  transition: background-color 0.2s;
  display: inline-block;

  &:hover {
    background-color: darken($primary-color, 12);
  }

  &--prev, &--next {
    padding-top: 0.5rem;
  }


}

.h-text {
  &--small {
    font-size: 0.7em;
  }
  &--uppercase {
    text-transform: uppercase;
  }
}

.c-container {
  &--sidebar {
    width: 72%;
    margin-left: 25%;
    position: relative;
  }
}

.c-folio-item {
  background-color: rgba(255,255,255,0.7);
  padding: 1rem;
  margin-bottom: 1rem;
  text-decoration: none;
  color: #222;
  display: block;

  &__title {
    color: $primary-color;
    margin-bottom: 0;
    font-weight: 700;
  }

  &__subtitle {
    margin-top: 0;
    font-weight: 400;
  }

  &__content {
    font-family: $secondary-font-stack;
  }

  &__images {

    &--grid {
      display: grid;
      grid-template-columns: repeat(12, 1fr);
      grid-template-rows: repeat(12, 1fr);
      grid-gap: 6px;

      &.h-aspect {
        &:after {
          grid-column-start: 1;
          grid-column-end: span 1;
          grid-row-start: 1;
          grid-row-end: span 1;
          content:'';
        }

        $aspect-ratios: ((4,1),(3,1),(215,100),(2,1),(1,1),(16,9),(4,3));

        @each $item in $aspect-ratios {
          &--#{nth($item,1)}-#{nth($item,2)} {
            &::after {
              padding-bottom:nth($item,2)/nth($item,1)*100%;
            }
          }
        }
      }
    }


    display: flex;
    justify-content: center;
    margin-left: -0.25rem;
    margin-right: -0.25rem;
  }

  &__image {
    margin-left: 0.25rem;
    margin-right: 0.25rem;
    max-width: 600px;
    width: 75vw;
    text-align: center;

    img {
      max-width: 100%;
      max-height: 75vh;
    }
  }
}

.c-sidebar-menu {
  // padding-left: 1rem;

  &__header {
    font-weight: bold;
  }

  &__list {
    font-family: $primary-font-stack;
    list-style-type: none;
    padding-left: 0;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
  }

  &__checkbox {
    display: none;

    &:checked + .c-sidebar-menu__list-item {
      color: $primary-color;
      font-weight: bold;
    }
  }

  &__list-item {
    margin-top: 0.25rem;
    margin-bottom: 0.25rem;
    cursor: pointer;
    box-shadow: 0 0 5px 4px white;
    background-color: white;
    display: inline;
  }
}


.h-grid-padding {
  grid-column-start: 1;
  grid-column-end: span 12;
  grid-row-start: 1;
}

.c-skill-list {
  padding-left: 0;
  list-style-type: none;

  &__item {
    color: $primary-color;
    border: 1px solid $primary-color;
    border-radius: 2rem;
    padding: 0 0.5rem 0 0.5rem;
    margin-bottom: 0.25rem;
    display: inline-block;

    &::before {
      content: '+';
      margin-right: 0.25rem;
    }
  }
}


.show-for-small {
  display: none;
}

.c-site-identity {
  font-weight: 600;
  font-family: 'Montserrat',sans-serif;
  text-transform: uppercase;
  color: white;
  text-decoration: none;

  &--homepage {
    position: fixed;
    line-height: 45px;
    bottom: 50%;
    left: 37px;
    font-size: 3rem;
    padding: 0.75rem;
    margin-bottom: 0.5rem;
    letter-spacing: -1px;
  }

  &--sidebar {
    padding: 0.5rem;
    margin-left: -0.5rem;
    padding-bottom: 0;
    font-size: 1.5rem;
  }

  &--header {
      display: none;
  }
}

.c-filter {
    height: 2rem;
    border: 0.5px solid grey;
    box-shadow: inset 0 0 4px rgba(0,0,0,0.2);
    font-family: $primary-font-stack;
    color: $primary-color;
    font-weight: bold;
    outline: none;

    .c-filter__option {
        color: #222;
    }

    .c-filter__option--disabled {
        color: $primary-color;
        font-weight: bold;
    }
}

.c-sidebar {
  position: fixed;
  width: 28%;
  padding-top: 3rem;
  padding-left: 1.75rem;
}

.c-menu {
  font-family: 'Montserrat',sans-serif;
  margin: 0;
  list-style-type: none;

  &__item {
    display: inline-block;
    text-transform: uppercase;

    a {
      text-decoration: none;
      color: white;
    }
  }

  &--sidebar {
    padding: 0;
    margin-left: -0.25rem;
    margin-bottom: 5rem;

    .c-menu__item {
      padding: 0.25rem;
    }
  }

  &--homepage {
    position: fixed;
    top: 47%;
    left: 37px;
    background-color: rgba(255, 255, 255, 0.9);
    padding-left: 1rem;
    padding-right: 1rem;

    li {
      a {
        display: inline-block;
        padding: 0.75rem 1rem;
        color: #222;

        &:hover {
          color: #888;
        }
      }
    }
  }
}

.c-resume {
    padding: 1rem;
  background-color: rgba(255, 255, 255, 0.9);

  &__header {
      margin-bottom: 2rem;
      display: flex;
      justify-content: space-between;
      align-items: center;

      h1 {
          margin-bottom: 0;
      }

      p {
          margin-top: 0;
      }
  }

  &__contact {
      i {
          $size: 3rem;
          font-size: 1.5rem;
          display: inline-block;
          width: $size;
          height: $size;
          line-height: $size;
          text-align: center;
          background-color: $primary-color;
          color: white;
          border-radius: 50%;
      }
  }

  h2 {
    font-size:1rem;
    text-transform: uppercase;
    border-bottom: 1px solid $primary-color;
    padding-bottom: 0.25rem;
  }

  ul {
    li {

    }
  }
}

.c-resume {
    &__section-title {
      color: $primary-color;
      margin-bottom: 0.25rem;
    }
    &__section-body {
        display: flex;
    }
}

.c-job {

  &__employer {
    margin: 0;
  }

  &__description {
    ul, p {
      margin: 0;
    }

    ul {
      li {
        margin-bottom: 0.5rem;
      }
    }
  }
}

img {
  max-width: 100%;
  max-height: 100%;
}

.h-flex {
  display: flex;

  &--vertical {
    flex-direction: column;
  }

  &--space-between {
    justify-content: space-between;
  }
}

.c-logo-canvas {
    display: none;
}

@media screen and (max-width: 1200px){
    .c-sidebar {
        width: 200px;
    }
    .c-menu {
        &--sidebar {
            margin-top: 1rem;

            .c-menu__item {
                display: block;
                padding: 0;

                a {
                    color: rgba(0,0,0,0.9);
                    padding: 0.25rem;
                    display: inline-block;
                    font-weight: bold;

                    &:hover {
                        color: initial;
                    }
                }

                &--selected {
                    a {
                        color: $primary-color;
                    }
                }
            }
        }
    }
}

@media screen and (max-width: 800px){
    .c-site-identity {
        &--header {
            display: block;
            width: 200px;
            font-size: 1.5rem;
            position: absolute;
            top: 1rem;
            left: 1.5rem;
        }

        &--sidebar {
            display: none;
        }
    }

    .c-sidebar {
        padding-top: 1rem;
    }

    .c-logo-canvas {
        display: block;
        position: relative;
    }

    .c-job {
        &__body {
            flex-direction: column;
        }

        &__details {
            margin-bottom: 1rem;
        }
    }
}

@media screen and (max-width: 480px){

    .c-site-identity {
        &--homepage {
            text-align: center;
            left: 0;
        }

        &--sidebar {
            width: 200px;
            display: block;
        }

        &--header {
            display: none;
        }
    }

    .c-menu {
        &--homepage {
            top: auto;
            bottom: 1rem;
            left: auto;
            background: none;
            display: flex;
            width: 100%;
            justify-content: space-between;

            li a span {
                padding: 0.25rem;
                box-shadow: 0 0 5px 4px white;
                background-color: white;
            }
        }

        &--sidebar {
            background-color: rgba(255, 255, 255, 0.8);
            display: flex;
            justify-content: space-between;

            li a {
                padding: 0.5rem;
            }
        }
    }

  .c-container {
    &--sidebar {
      width: 100%;
      margin-left: 0;
      padding: 1rem;
    }
  }

  .c-sidebar-menu {
    display: none;
  }

  .c-sidebar {
      position: absolute;
      top: 0;
      padding-top: 1rem;
      width: 100%;
      padding-left: 1rem;
      padding-right: 1rem;
  }

  .c-folio-item {
      &__title {
          text-align: center;
      }

      &__subtitle {
          text-align: center;
          font-size: 0.9rem;
          margin-top: 0.25rem;
      }
  }
}

@media print {
    .c-sidebar, canvas {
        display: none;
    }

    .h-show-for-print {
        display: initial !important;
    }

    .c-container--sidebar {
        width: 100%;
        margin-left: 0;
    }
}

